--- a/style.css
+++ b/style.css
@@ -4,28 +4,105 @@
   text-decoration: none;
   box-sizing: border-box;
 }
-.navbar{
-    position: flex;
-    background-color: transparent;
-    width: 100%;
-    padding: 20px 0;
-    top: 0;
-    z-index: 100;
-    transition: .3s linear;
-    line-height: 50px;
+.navbar {
+  position: flex;
+  background-color: transparent;
+  width: 100%;
+  padding: 20px 0;
+  top: 0;
+  z-index: 100;
+  transition: 0.3s linear;
+  line-height: 50px;
 }
-.inner-width{
-    max-width: 1300px;
-    margin: auto;
+.inner-width {
+  max-width: 1300px;
+  margin: auto;
 }
-.navbar .inner-width{
-    display: flex;
-    justify-content: center;
-    align-items:center;
+.navbar .inner-width {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .logo i {
-    font-size: 50px;
-    color:#210808;
-    cursor:pointer;
-    margin-left: 35px;
+  font-size: 50px;
+  color: #210808;
+  cursor: pointer;
+  margin-left: 35px;
 }
+.navbar-menu .link {
+  color: #fff;
+  font-size: 13px;
+  font-weight: 900;
+  font-family: "Dancing Script";
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  line-height: 20px;
+  margin-left: 35px;
+  display: inline-block;
+}
+.navbar-menu .link::after{
+    content: '';
+    display: block;
+    width: 0;
+    height: 1.8px;
+    background-color: #521515;
+    transition: width 0.3s;
+  }
+  .navbar-menu .link:hover::after{
+    width: 100%;
+  }
+  #home{
+    height: 100vh;
+    /* background-image: url(); */
+    background-size: cover;
+    background-position: center;
+  }
+  #home .inner-width{
+    display: flex;
+    align-items: center;
+    height: 100%;
+  }
+  #home .content{
+    padding-left: 50px;
+    text-align: left;
+    width: 50%;
+  }
+  #home .content h1{
+    font-size: 80px;
+    line-height: 100px;
+    font-weight: 900;
+    letter-spacing: 18px;
+    text-transform: uppercase;
+    font-family: Verdana, Tahoma, sans-serif;
+    color:#521515;
+  }
+  #home .content h1 span{
+    color: #fff;
+  }
+  #home .content p{
+    font-size: 17px;
+    margin: 20px 0;
+    line-height: 30px;
+    color: #fff;
+    font-weight: 500;
+    letter-spacing: 2px;
+    font-family: "Dancing Script",sans-serif;
+  }
+  #home .content button{
+    padding: 13px 20px;
+    outline: none;
+    border: none;
+    background-color: ;
+    color: #fff;
+    font-family: "Dancing Script",sans-serif;
+    font-size: 16px;
+    letter-spacing: 3px;
+    font-weight: 900;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+  #home .content button:hover{
+    background-color: #fff;
+    color:#521515;
+  }
