--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@
   }
   #home{
     height: 100vh;
-    /* background-image: url(); */
+    background-image: url("https://unsplash.com/photos/sbaOiBsBS7o");
     background-size: cover;
     background-position: center;
   }
