--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css);
 * {
   margin: 0;
   padding: 0;
@@ -30,8 +31,8 @@
   margin-left: 35px;
 }
 .navbar-menu .link {
-  color: #fff;
-  font-size: 13px;
+  color: rgb(151, 131, 131);
+  font-size: 22px;
   font-weight: 900;
   font-family: "Dancing Script";
   text-transform: uppercase;
@@ -54,7 +55,7 @@
   /*------------Home------------------*/
   #home{
     height: 100vh;
-    background-image: url("img/Home1.jpg");
+    background-image: url("");
     background-size: cover;
     background-position: center;
   }
@@ -74,7 +75,7 @@
     font-weight: 900;
     letter-spacing: 18px;
     text-transform: uppercase;
-    font-family: Verdana, Tahoma, sans-serif;
+    font-family: "Dancing Script",sans-serif;
     color:#521515;
   }
   #home .content h1 span{
@@ -110,7 +111,7 @@
   /*-----------About-----------------*/
   #about{
     height: 100vh;
-    background-image: url(about.jpg);
+    background-image: url("img/About1.jpg");
     background-position: center;
     background-size: cover;
     padding-top: 150px;
@@ -118,7 +119,7 @@
   #about .container{
     width: 50%;
     float: right;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: "Dancing Script",sans-serif;
     text-align: center;
   }
   /*-----------Container-------------*/
@@ -136,7 +137,7 @@
   }
   .container p{
     color: #3f3f3f;
-    font-family: 'Raleway',sans-serif;
+    font-family: "Dancing Script",sans-serif;
     font-size: 17px;
     font-weight: 700;
     line-height: 29px;
@@ -149,7 +150,7 @@
     outline: none;
     border: none;
     border-radius: 4px;
-    font-family: 'Raleway',sans-serif;
+    font-family: "Dancing Script",sans-serif;
     font-size: 19px;
     font-weight: 500;
     letter-spacing: 2px;
@@ -160,3 +161,196 @@
     background-color:#521515;
     font-weight: 900;
   }
+  /*-----------Products-------------*/
+  #products{
+    height: auto;
+    background-image: url("img/Products1.jpg");
+    background-position: center;
+    background-size: cover;
+    padding:80px;
+  }
+  #products h1{
+    text-align: center;
+    color:#521515;
+    font-size: 60px;
+    font-weight: 800;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    margin-bottom: 30px;
+    font-family: "Dancing Script",sans-serif;
+  }
+  #products h1 span{
+    color: #fff;
+  }
+  .products{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 40px;
+    justify-content: center;
+  
+  }
+  .product{
+    height: 350px;
+    display: grid;
+    grid-template-rows: 3fr 1fr;
+  }
+  .img img{
+    width: 100%;
+    height: 100%;
+  }
+  .price{
+    background-color: #521515;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    font-family: "Dancing Script",sans-serif;
+    font-weight: 900;
+    font-size: 25px;
+    letter-spacing: 2px;
+  }
+  /*----------Contact-------------*/
+  #contact{
+    height: 90vh;
+    background-image: url("img/Contact.jpg");
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    justify-content: flex-end;
+  }
+  .contact{
+    padding: 50px;
+    width: 500px;
+  }
+  .contact h1{
+    text-align: center;
+    color:#521515 ;
+    font-size: 40px;
+    font-weight: 900;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    margin-bottom: 20px;
+    
+  }
+  .contact h1 span{
+    color: #f0ebeb;
+  }
+  .container-items{
+    display: flex;
+    justify-content: center;
+  }
+  .items{
+    margin: 0 auto;
+  }
+  .item{
+    margin-bottom: 15px;
+  }
+  input, textarea{
+    width: 310px;
+    background: none;
+    border: 2px solid #8a8a8a;
+    border-radius: 3px;
+    /* color: #e9e0e0; */
+    padding: 20px;
+    font-size: 15px;
+    font-family: "Dancing Script",sans-serif;
+    font-weight: 500;
+  }
+  input:focus, textarea:focus{
+    border: 2px solid ;
+    outline: none;
+  }
+  .item textarea{
+    height: 180px;
+    resize: none;
+    margin-bottom: 30px;
+  }
+  input::placeholder, textarea::placeholder{
+    color: #575757;
+    font-size: 15px;
+  }
+  .button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .button button{
+    padding: 15px 28px;
+    background-color: #3f3f3f;
+    outline: none;
+    border: none;
+    border-radius: 4px;
+    font-family: "Dancing Script",sans-serif;
+    font-size: 19px;
+    font-weight: 500;
+    letter-spacing: 2px;
+    color: #fff;
+    text-transform: uppercase;
+    cursor: pointer;
+  }
+  .button button:hover{
+    background-color:#521515 ;
+    font-weight: 900;
+  }
+  .footer{
+    background-color: #2c2c2c;
+    width: 100%;
+    padding: 50px;
+  }
+  .row{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: 100%;
+    color: #fff;
+  }
+  .cl{
+    display: flex;
+    justify-content: center;
+  }
+  .cl:nth-child(1){
+    justify-content: flex-start;
+  }
+  .cl:nth-child(2){
+    flex-direction: column;
+    text-align: right;
+  }
+  .logo-footer i{
+  font-size: 49px;
+  text-align: center;
+  color:#521515 ;
+  cursor: pointer;
+  }
+  .copyright{
+    line-height: 60px;
+    text-align: center;
+    font-size: 15px;
+    font-weight: 500;
+    font-family: "Dancing Script",sans-serif;
+    letter-spacing: 2px;
+    width: 300px;
+  }
+  .address{
+    line-height: 30px;
+    font-size: 15px;
+    font-weight: 500;
+    font-family: "Dancing Script",sans-serif;
+    letter-spacing: 2px;
+  }
+  .s-m{
+    margin-top: 30px;
+  }
+  .s-m a{
+    display: inline-block;
+    font-size: 25px;
+    color: #fff;
+    text-align: left;
+    margin-left: 15px;
+    transition: 0.3s;
+    cursor: pointer;
+  }
+  .s-m a:hover{
+    transform: scale(1.2);
+    color: #521515;
+  }
+  
+  
